--- a/cc.css
+++ b/cc.css
@@ -44,44 +44,50 @@ audio {
   color: black;
 }
 
-#taylor{
-  font-family:menlo !important;
-  margin-left:60%;
-  margin-top:10%;
-  color:blue;
-  width:15%;
-  background-color:white;
-  text-align:center;
-  border-radius: 1px;
-  border-style:dotted;
-  border-color:salmon;
-  cursor:pointer;
-  font-size:30px;
-  position:absolute;
-}
-#taylor:hover{
-  transform:scale(1.2);
-  color:salmon;
+
+#pulse-x {
+  top: 60%;
+  left: 70%;
+  cursor: pointer;
 }
 
-#taylor2{
-  font-family:menlo !important;
-  margin-left:20%;
-  margin-top:30%;
-  color:blue;
-  width:15%;
-  background-color:white;
-  text-align:center;
-  border-radius: 1px;
-  border-style:dotted;
-  border-color:salmon;
-  cursor:pointer;
-  font-size:30px;
-  position:absolute;
+#pulse-y{
+  top: 30%;
+  left: 40%;
+  cursor: pointer;
 }
-#taylor2:hover{
-  transform:scale(1.2);
-  color:salmon;
+
+#pulse-z{
+  top: 10%;
+  left: 10%;
+  cursor: pointer;
+}
+
+#pulse-a{
+  top: 30%;
+  left: 30%;
+  cursor: pointer;
+}
+
+.pulse-ring {
+  content: '';
+  width: 20px;
+  height: 20px;
+  border: 4px solid #F00;
+  border-radius: 50%;
+  position: absolute;
+  animation: pulsate infinite 1.5s;
+}
+
+@-webkit-keyframes pulsate {
+  0% {
+    -webkit-transform: scale(1, 1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.2, 1.2);
+    opacity: 0;
+  }
 }
 
 .exxon{
