--- a/cc.css
+++ b/cc.css
@@ -1,9 +1,22 @@
 body{
   overflow: hidden;
+  font-family:menlo;
+
 }
 
 audio {
    display:none;
+}
+
+.next {
+  position: absolute;
+  top: 93%;
+  left: 93%;
+}
+.back {
+  position: absolute;
+  top: 93%;
+  right: 93%;
 }
 
 #bg1 {
@@ -160,3 +173,124 @@ bold {
   transform:scale(1.2);
   transition:0.6s;
 }
+
+.pulse-ring {
+  content: '';
+  width: 20px;
+  height: 20px;
+  border: 4px solid #F00;
+  border-radius: 50%;
+  position: absolute;
+  animation: pulsate infinite 1.5s;
+}
+
+@-webkit-keyframes pulsate {
+  0% {
+    -webkit-transform: scale(1, 1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.2, 1.2);
+    opacity: 0;
+  }
+}
+
+#pulse-1 {
+  top: 200px;
+  left: 100px;
+  cursor: pointer;
+}
+
+#pulse-2 {
+  top: 300px;
+  left: 600px;
+  cursor: pointer;
+}
+
+#pulse-3 {
+  top: 600px;
+  left: 900px;
+  cursor: pointer;
+}
+
+#pulse-4 {
+  top: 400px;
+  left: 800px;
+  cursor: pointer;
+}
+
+#pulse-5 {
+  top: 200px;
+  left: 1000px;
+  cursor: pointer;
+}
+
+#pulse-6 {
+  top: 240px;
+  left: 400px;
+  cursor: pointer;
+}
+
+#gas:hover {
+  fill: #fff;
+}
+
+.gas {
+  fill: #E0A2A0;
+  cursor: pointer;
+}
+.gas:hover{
+  fill: #000;
+}
+#gas-highlight{
+  position:absolute;
+  height: 200px;
+  width: 600px;
+  top: 270px;
+  left: 250px;
+  font-family:menlo;
+  display: none;
+}
+
+.liquid {
+  fill: #CF1643; 
+  cursor: pointer;
+}
+.liquid:hover{
+  fill: #000;
+}
+
+#liquid-highlight{
+  position:absolute;
+  height: 200px;
+  width: 600px;
+  top: 270px;
+  left: 250px;
+    font-family:menlo;
+  display: none;
+}
+
+.coal {
+  fill: #981623;
+  cursor: pointer;
+}
+.coal:hover{
+  fill: #000;
+}
+#coal-highlight{
+  position:absolute;
+  height: 200px;
+  width: 600px;
+  top: 270px;
+  left: 250px;
+    font-family:menlo;
+  display: none;
+}
+
+.supimg {
+  position: absolute;
+  width: 400px;
+  left: 250px;
+  top: 100px;
+}
+
