--- a/cc.css
+++ b/cc.css
@@ -124,11 +124,17 @@ audio {
   position: absolute;
   top: 93%;
   left: 93%;
+  background-color: white;
+  opacity: 0.7;
+  padding: 10px;
 }
 .back {
   position: absolute;
   top: 93%;
   right: 93%;
+  background-color: white;
+  opacity: 0.7;
+  padding: 10px;
 }
 
 #bg1 {
@@ -180,13 +186,23 @@ bold {
   font-size:27px;
   left:35.5%;
   top:20%;
-  bottom:40%;
   z-index:1;
 }
 
 .home:hover{
   opacity:0.6;
   transition:0.5s;
+}
+
+.help{
+  position:absolute;
+  font-family:menlo;
+  font-size:27px;
+  left:30%;
+  top:20%;
+  width: 40%;
+  z-index:1;
+  color:white;
 }
 
 .intro{
@@ -358,6 +374,18 @@ bold {
   cursor: pointer;
 }
 
+#pulse-7 {
+  top: 100px;
+  left: 300px;
+  cursor: pointer;
+}
+
+#pulse-8 {
+  top: 540px;
+  left: 700px;
+  cursor: pointer;
+}
+
 #gas:hover {
   fill: #fff;
 }
@@ -417,7 +445,10 @@ bold {
 .supimg {
   position: absolute;
   width: 400px;
-  left: 250px;
-  top: 100px;
+  left: 750px;
+}
+#graph1 {
+  width: 80%;
+  height: 80%;
 }
 
