--- a/cc.css
+++ b/cc.css
@@ -203,6 +203,7 @@ bold {
   left:35.5%;
   top:20%;
   z-index:1;
+
 }
 
 .home:hover{
@@ -402,6 +403,11 @@ bold {
   cursor: pointer;
 }
 
+#pulse-b {
+  top: 540px;
+  left: 700px;
+  cursor: pointer;
+}
 #gas:hover {
   fill: #fff;
 }
@@ -417,8 +423,8 @@ bold {
   position:absolute;
   height: 200px;
   width: 600px;
-  top: 270px;
-  left: 250px;
+  top: 25%;
+  left: 25%;
   font-family:menlo;
   display: none;
 }
@@ -435,8 +441,8 @@ bold {
   position:absolute;
   height: 200px;
   width: 600px;
-  top: 270px;
-  left: 250px;
+  top: 25%;
+  left: 25%;
     font-family:menlo;
   display: none;
 }
@@ -452,8 +458,8 @@ bold {
   position:absolute;
   height: 200px;
   width: 600px;
-  top: 270px;
-  left: 250px;
+  top: 25%;
+  left: 25%;
     font-family:menlo;
   display: none;
 }
@@ -466,4 +472,82 @@ bold {
 #graph1 {
   width: 80%;
   height: 80%;
+  position: absolute;
+  left: 10%;
+}
+
+#trash-icon {
+  width: 5%;
+  position: absolute;
+  top: 400px;
+  left: 1100px;
+}
+
+#coal-line {
+  cursor: pointer;
+  stroke-width:11;
+  stroke:#981623;
+
+}
+
+#coal-line:hover {
+  stroke-width:15;
+  stroke:#000;
+}
+
+#coal-popup {
+  position:absolute;
+  height: 20%;
+  width: 40%;
+  top: 69%;
+  left: 28%;
+  font-family:menlo;
+  display: none;
+}
+
+#liquid-line {
+  cursor: pointer;
+  stroke-width:11;
+  stroke:#CF1643;
+
+}
+
+#liquid-line:hover {
+  stroke-width:15;
+  stroke:#000;
+}
+
+#liquid-popup {
+  position:absolute;
+  height: 20%;
+  width: 40%;
+  top: 67%;
+  left: 28%;
+    font-family:menlo;
+  display: none;
+}
+
+#gas-line {
+  cursor: pointer;
+  stroke-width:11;
+  stroke:#E0A2A0;
+}
+
+#gas-line:hover {
+  stroke-width:15;
+  stroke:#000;
+}
+
+#gas-popup {
+  position:absolute;
+  height: 200px;
+  width: 480px;
+  top: 68%;
+  left: 28%;
+    font-family:menlo;
+  display: none;
+}
+
+#graph2 {
+  position: absolute;
 }
